Fixed Z-index on footer

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ p {
 /*==== FOOTER ====*/
 
 .footer {
+	z-index: 10;
 	position: fixed;
 	left: 0;
 	bottom: 0;
